--- a/views/index.html
+++ b/views/index.html
@@ -1,1 +1,14 @@
-ciao
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>title</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+  </head>
+  <body>
+    <h1>
+      Ciao
+    </h1>
+  </body>
+</html>
